[gd_scene load_steps=8 format=2]

[ext_resource path="res://gamecode/scripts/dungeon.gd" type="Script" id=1]
[ext_resource path="res://gamecode/scenes/dungeonModule/playerCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://gamecode/scenes/dungeonModule/events/shopEvent.tscn" type="PackedScene" id=5]
[ext_resource path="res://gamecode/scenes/dungeonModule/events/lootEvent.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/meshLibraries/exampleMeshLibrary.meshlib" type="MeshLibrary" id=10]

[sub_resource type="ProceduralSky" id=12]

[sub_resource type="Environment" id=13]
background_mode = 1
background_sky = SubResource( 12 )
background_color = Color( 0.152941, 0.14902, 0.141176, 1 )
ambient_light_energy = 0.0
fog_enabled = true
fog_depth_begin = 5.0
fog_depth_end = 50.0

[node name="dungeon" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.01936, 0, 0 )
script = ExtResource( 1 )

[node name="playerCamera" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 1, 1 )
fov = 90.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[node name="shopEvent" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 5 )

[node name="lootEvent" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -3 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 10 )
data = {
"cells": PoolIntArray( 0, 0, 536870913, 1, 0, 536870913, 2, 0, 1441792, 3, 0, 1441792, 4, 0, 1441792, 5, 0, 1441792, 6, 0, 1441792, 7, 0, 1441792, 8, 0, 536870913, 9, 0, 1, 10, 0, 537526273, 11, 0, 1441794, 65535, 0, 4, 0, 1, 1, 1, 1, 655362, 8, 1, 1048578, 9, 1, 536870913, 10, 1, -1609564156, 11, 1, 537919492, 12, 1, 538312706, 65535, 1, 1048578, 0, 2, 655360, 9, 2, 655360, 12, 2, 655360, 0, 3, 655360, 9, 3, 537919491, 12, 3, -1609564157, 0, 4, 655360, 0, 5, 655360, 4, 5, 2, 5, 5, 1441796, 6, 5, -1609170942, 0, 6, 537919490, 1, 6, 1048576, 2, 6, 1048576, 3, 6, 1048576, 4, 6, 655361, 5, 6, 537526273, 6, 6, 537526276, 4, 7, 1048578, 5, 7, 537919492, 6, 7, 655362, 0, 65531, 1441795, 0, 65532, 655360, 0, 65533, 537526272, 9, 65533, 536870914, 10, 65533, 538312704, 11, 65533, -1609957373, 0, 65534, 655360, 9, 65534, 536870912, 0, 65535, 536870913, 1, 65535, 538312706, 8, 65535, 2, 9, 65535, 655361, 10, 65535, 1441794, 65535, 65535, 2 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}
[connection signal="movement_finished" from="playerCamera" to="." method="_on_playerCamera_movement_finished"]
[connection signal="area_entered" from="playerCamera/playerArea" to="." method="_on_playerArea_area_entered"]

[editable path="playerCamera"]
